--- a/content/candies/revision-a/css/groups.css
+++ b/content/candies/revision-a/css/groups.css
@@ -30,7 +30,7 @@ input.name{
 /* Resizable
 ----------------------------------*/
 .resizer{
-  background-image: url(chrome://tabcandy/content/img/shared/resizer.png);
+  background-image: url(../img/resizer.png);
 }
 
 .ui-resizable { position: relative;}
