+ Moved back to black overlay look for stacks + Grappling with a correct new-tab animation

--- a/content/candies/revision-a/css/groups.css
+++ b/content/candies/revision-a/css/groups.css
@@ -118,8 +118,8 @@ body {
 
 .stack-trayed .tab-title{
   display: block !important;
-	/*text-shadow: rgba(0,0,0,1) 1px 1px 2px;
-  color: #EEE;*/
+	text-shadow: rgba(0,0,0,1) 1px 1px 2px;
+  color: #EEE;
   font-size: 11px;
 }
 .stack-trayed .thumb{ -moz-box-shadow: none !important;}
@@ -155,13 +155,12 @@ body {
 }
 
 .overlay{
-  /*
-  // Growl-style
+  
   background-color: rgba(0,0,0,.7) !important;
   -moz-box-shadow: 3px 3px 8px rgba(0,0,0,.5);        
 	-moz-border-radius: 0.4em;
-	*/
-	// The same look as a group.
+	
+	/*
 	border: 1px solid rgba(230,230,230,1);
 	background-color: rgba(248,248,248,1);
 	-moz-border-radius: 0.4em;
@@ -170,7 +169,7 @@ body {
 		inset rgba(255, 255, 255, 0.6) 0 2px 0px,
 		inset rgba(255, 255, 255, 0.6) 0 -2px 0px,
 		inset rgba(255, 255, 255, 0.6) 2px 0px 0px,
-		inset rgba(255, 255, 255, 0.6) -2px 0px 0px;	
+		inset rgba(255, 255, 255, 0.6) -2px 0px 0px;	*/
 }
 
 /* Other
@@ -195,7 +194,7 @@ body {
 .newTabAnimatee{
   position: absolute;
   background-color: white;
-  border: 1px solid #7F7F7F;
+  border: 1px solid #AAA;
 }
 
 .active{
