+ Removed tab bar control + Group title box now grows when you type into it, but always stays smaller than the width of the group

--- a/content/candies/revision-a/css/groups.css
+++ b/content/candies/revision-a/css/groups.css
@@ -12,6 +12,13 @@ body {
 	margin: 0 auto;	
 }
 
+#top-border {
+	border-top: 1px solid black;
+  width: 100%;
+  position: absolute;
+  z-index: 999999;
+}
+
 /* Tab Styling
 ----------------------------------*/
 
@@ -263,34 +270,6 @@ input.defaultName:hover{
 .ui-resizable-handle { position: absolute;font-size: 0.1px;z-index: 99999; display: block;}
 .ui-resizable-disabled .ui-resizable-handle, .ui-resizable-autohide .ui-resizable-handle { display: none; }
 .ui-resizable-se { cursor: se-resize; width: 12px; height: 12px; right: 1px; bottom: 1px; }
-
-/* Action
-----------------------------------*/
-#actions{
-  position: fixed;
-  top:      0;
-  left:     0;
-  height: 4px;
-  width: 100%;
-  background-image: url(../img/tabbar-toggle.png);
-  z-index: 10000;
-}
-
-#tabbar-toggle{
-  position: fixed;
-  top:     0px;
-  right:  15px;
-  height: 26px;
-  width:  38px;
-  background-image: url(../img/tabbar-toggle.png);
-  background-position: 0px -4px;
-  cursor: pointer;
-  z-index: 10000;
-}
-
-.tabbar-off{
-  background-position: 0px -30px !important;
-}
 
 /* Utils
 ----------------------------------*/
